--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
@@ -42,7 +42,7 @@ body {
     height: 500px;
     margin: auto;
     margin-bottom: 10px;
-    background-image: url('../../../assets/images/bm.jpg');
+
   }
   
   .featured-image {
@@ -59,7 +59,7 @@ body {
     max-height: 100%;
     width: auto;
     height: auto;
-    object-fit: contain; /* ✅ Ensures image fits without cropping */
+    object-fit: cover; /* ✅ Ensures image fits without cropping */
     border-radius: 8px;
   }
   .prev-btn, .next-btn {
