--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
@@ -105,7 +105,7 @@
         </div>
       </div>
 
-      <div class="stock-status">
+      <div class="stock-status" *ngIf="isStock">
         <p *ngIf="itemData.stock > 0" class="in-stock">In Stock</p>
         <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
       </div>
