--- a/Boutique-FE/src/layout/footer/footer.component.html
+++ b/Boutique-FE/src/layout/footer/footer.component.html
@@ -12,7 +12,7 @@
 
   <!-- Social Media Icons Row -->
   <div class="footer-social-media">
-    <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+    <a href="https://www.instagram.com/_same_pinch?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
     <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
