--- a/Boutique-FE/src/layout/header/header.component.html
+++ b/Boutique-FE/src/layout/header/header.component.html
@@ -54,7 +54,7 @@
   </div>
   <div class="scroll-container">
     <div class="scroll-text">
-      Contact us at: +1234567890 | Address: 123 Main St, City, Country
+      Contact us at: +91-9600679927 | +91-9600665848 , instaId:samepich
     </div>
   </div>
 </div>
