--- a/Boutique-FE/src/pages/adminpage/add-items/add-items.component.html
+++ b/Boutique-FE/src/pages/adminpage/add-items/add-items.component.html
@@ -52,6 +52,14 @@
       <input type="number" id="stock" name="stock" [(ngModel)]="stock" placeholder="Enter stock quantity" required />
     </div>
 
+    <div class="form-group">
+      <label for="isStock">IsStockShowable</label>
+      <select id="isStock" name="isStock" [(ngModel)]="isStock" >
+        <option value="true">True</option>
+        <option value="false">False</option>
+      </select>
+    </div>
+
     <!--vedioUrl-->
     <div class="form-group">
       <label for="vedioUrl">vedioUrl</label>
