--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -113,10 +113,10 @@
       <div class="category-image HalfSaree" (click)="halfsaree()"></div>
       <div class="category-name">Half Saree</div>
   </div>
-  <div class="category-item">
+  <!-- <div class="category-item">
     <div class="category-image Leggings" (click)="leggings()"></div>
     <div class="category-name">Leggings</div>
-</div>
+</div> -->
   </div>
   <div class="image-container">
     <button class="prev-btn" onclick="prevImage()">&#10094;</button>
