--- a/Boutique-FE/src/layout/header/header.component.css
+++ b/Boutique-FE/src/layout/header/header.component.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   background-color: black;
-  /* padding: 10px 20px; */
+  padding: 10px 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-padding-top:8px ;
-/* padding: 20px; */
+/* padding-top:8px ;
+padding: 20px;
 padding-right: 20px;
-padding-bottom: 0px;
+padding-bottom: 0px; */
   .header-top {
     display: flex;
     justify-content: space-between;
@@ -117,13 +117,13 @@ padding-bottom: 0px;
     gap: 20px;
 
     button {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: bold;
       color:#FFD700;;
       background: none;
       border: none;
       cursor: pointer;
-      /* padding: 5px 15px; */
+      padding: 5px 15px;
       border-radius: 4px;
       transition: all 0.3s ease;
 
@@ -139,7 +139,7 @@ padding-bottom: 0px;
   overflow: hidden;
   white-space: nowrap;
   color: #FFD700;
-  /* border: 1px solid #ddd; */
+  border: 1px solid #ddd;
   height: 30px; /* Optional height */
   line-height: 30px; /* Align text vertically */
 }
