--- a/Boutique-FE/src/app/momAndDaughterFolder/momand-daughter/momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/momand-daughter/momand-daughter.component.css
@@ -12,7 +12,7 @@
     }
     
     .arrivalcard {
-      width: 260px;
+      width: 200px !important;
       height: 360px;
       margin: 10px;
       display: inline-block;
