--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -113,7 +113,7 @@
 
 .category-name {
   font-size: 12px;
- font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ font-family:  'Montserrat', sans-serif;;
   /* font-weight: bold; */
   text-align: center;
 }
@@ -256,12 +256,12 @@ button:hover {
   .card-details {
     padding: 10px;
     text-align: start;
-    font-size: 14px;
+    font-size: 12px;
     color: #333;
   }
   
   .card-details h2 {
-    font-size: 18px;
+    font-size: 14px;
     margin: 10px 0;
   }
   
