--- a/Boutique-FE/src/styles.css
+++ b/Boutique-FE/src/styles.css
@@ -4,9 +4,9 @@ html, body { height: 100%; }
 body { margin: 0;  }
 
 body {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; /* Replace with your preferred font */
+      font-family: 'Montserrat', sans-serif;
     font-size: 16px; /* Set a default font size */
     color: #333; /* Optional: Set a global text color */
-    line-height: 0.5;
+    line-height: 1;
   }
 
